// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ResetPasswordConfirm /> should render properly 1`] = `
Array [
  .emotion-0 {
  text-align: center;
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 32px;
  padding-bottom: 32px;
}

<h3
    className="emotion-0"
  >
    Enter New Password
  </h3>,
  .emotion-3 {
  padding-top: 8px;
}

.emotion-0 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-2 {
  position: relative;
}

.emotion-1 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #000000;
  background-color: #ffffff;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-1:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-1:hover {
  border: 2px solid #ffffff;
}

<div
    className="emotion-3"
  >
    <label
      className="emotion-0"
      htmlFor="newPassword1"
    >
      Password
    </label>
    <div
      className="emotion-2"
    >
      <input
        autoFocus={true}
        className="emotion-1"
        disabled={false}
        id="newPassword1"
        name="newPassword1"
        onChange={[Function]}
        type="password"
        value=""
      />
    </div>
    <div
      className="emotion-3"
    >
       
    </div>
  </div>,
  .emotion-3 {
  padding-top: 8px;
}

.emotion-0 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-2 {
  position: relative;
}

.emotion-1 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #000000;
  background-color: #ffffff;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-1:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-1:hover {
  border: 2px solid #ffffff;
}

<div
    className="emotion-3"
  >
    <label
      className="emotion-0"
      htmlFor="newPassword2"
    >
      Confirm Password
    </label>
    <div
      className="emotion-2"
    >
      <input
        className="emotion-1"
        disabled={false}
        id="newPassword2"
        name="newPassword2"
        onChange={[Function]}
        type="password"
        value=""
      />
    </div>
    <div
      className="emotion-3"
    >
       
    </div>
  </div>,
  .emotion-1 {
  padding-top: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0[aria-disabled=true] {
  background-color: #808080;
}

.emotion-0,
.emotion-0:hover,
.emotion-0:visited {
  background-color: #73b61c;
}

.emotion-0:hover {
  background-color: #96c955;
}

<div
    className="emotion-1"
  >
    <button
      aria-disabled={true}
      className="emotion-0"
      onClick={[Function]}
      type="submit"
    >
      Save
    </button>
  </div>,
]
`;

exports[`<ResetPasswordConfirm /> should render properly 2`] = `
Array [
  .emotion-0 {
  text-align: center;
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 32px;
  padding-bottom: 32px;
}

<h3
    className="emotion-0"
  >
    Enter New Password
  </h3>,
  .emotion-3 {
  padding-top: 8px;
}

.emotion-0 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-2 {
  position: relative;
}

.emotion-1 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #000000;
  background-color: #ffffff;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-1:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-1:hover {
  border: 2px solid #ffffff;
}

<div
    className="emotion-3"
  >
    <label
      className="emotion-0"
      htmlFor="newPassword1"
    >
      Password
    </label>
    <div
      className="emotion-2"
    >
      <input
        autoFocus={true}
        className="emotion-1"
        disabled={false}
        id="newPassword1"
        name="newPassword1"
        onChange={[Function]}
        type="password"
        value="foo"
      />
    </div>
    <div
      className="emotion-3"
    >
       
    </div>
  </div>,
  .emotion-3 {
  padding-top: 8px;
}

.emotion-0 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-2 {
  position: relative;
}

.emotion-1 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #000000;
  background-color: #ffffff;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-1:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-1:hover {
  border: 2px solid #ffffff;
}

<div
    className="emotion-3"
  >
    <label
      className="emotion-0"
      htmlFor="newPassword2"
    >
      Confirm Password
    </label>
    <div
      className="emotion-2"
    >
      <input
        className="emotion-1"
        disabled={false}
        id="newPassword2"
        name="newPassword2"
        onChange={[Function]}
        type="password"
        value="bar"
      />
    </div>
    <div
      className="emotion-3"
    >
       
    </div>
  </div>,
  .emotion-1 {
  padding-top: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0[aria-disabled=true] {
  background-color: #808080;
}

.emotion-0,
.emotion-0:hover,
.emotion-0:visited {
  background-color: #73b61c;
}

.emotion-0:hover {
  background-color: #96c955;
}

<div
    className="emotion-1"
  >
    <button
      className="emotion-0"
      onClick={[Function]}
      type="submit"
    >
      Save
    </button>
  </div>,
]
`;

exports[`<ResetPasswordConfirm /> should render properly 3`] = `
Array [
  .emotion-0 {
  text-align: center;
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 32px;
  padding-bottom: 32px;
}

<h3
    className="emotion-0"
  >
    Enter New Password
  </h3>,
  .emotion-3 {
  padding-top: 8px;
}

.emotion-0 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-2 {
  position: relative;
}

.emotion-1 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #000000;
  background-color: #ffffff;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-1:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-1:hover {
  border: 2px solid #ffffff;
}

<div
    className="emotion-3"
  >
    <label
      className="emotion-0"
      htmlFor="newPassword1"
    >
      Password
    </label>
    <div
      className="emotion-2"
    >
      <input
        autoFocus={true}
        className="emotion-1"
        disabled={false}
        id="newPassword1"
        name="newPassword1"
        onChange={[Function]}
        type="password"
        value="foo"
      />
    </div>
    <div
      className="emotion-3"
    >
       
    </div>
  </div>,
  .emotion-3 {
  padding-top: 8px;
}

.emotion-0 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-2 {
  position: relative;
}

.emotion-1 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #000000;
  background-color: #ffffff;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-1:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-1:hover {
  border: 2px solid #ffffff;
}

<div
    className="emotion-3"
  >
    <label
      className="emotion-0"
      htmlFor="newPassword2"
    >
      Confirm Password
    </label>
    <div
      className="emotion-2"
    >
      <input
        className="emotion-1"
        disabled={false}
        id="newPassword2"
        name="newPassword2"
        onChange={[Function]}
        type="password"
        value="foo"
      />
    </div>
    <div
      className="emotion-3"
    >
       
    </div>
  </div>,
  .emotion-1 {
  padding-top: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0[aria-disabled=true] {
  background-color: #808080;
}

.emotion-0,
.emotion-0:hover,
.emotion-0:visited {
  background-color: #73b61c;
}

.emotion-0:hover {
  background-color: #96c955;
}

<div
    className="emotion-1"
  >
    <button
      className="emotion-0"
      onClick={[Function]}
      type="submit"
    >
      Save
    </button>
  </div>,
]
`;

exports[`<ResetPasswordConfirm /> should render properly 4`] = `
Array [
  .emotion-0 {
  text-align: center;
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 32px;
  padding-bottom: 32px;
}

<h3
    className="emotion-0"
  >
    Enter New Password
  </h3>,
  .emotion-4 {
  padding-top: 8px;
}

.emotion-0 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-2 {
  position: relative;
}

.emotion-1 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #000000;
  background-color: #ffffff;
  border: 1px solid #c92300;
  border-width: 2px;
}

.emotion-1:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-1:hover {
  border: 2px solid #ffffff;
}

.emotion-3 {
  color: #c92300;
  font-style: italic;
  white-space: pre-line;
}

<div
    className="emotion-4"
  >
    <label
      className="emotion-0"
      htmlFor="newPassword1"
    >
      Password
    </label>
    <div
      className="emotion-2"
    >
      <input
        autoFocus={true}
        className="emotion-1"
        disabled={false}
        id="newPassword1"
        name="newPassword1"
        onChange={[Function]}
        type="password"
        value="foo"
      />
    </div>
    <div
      className="emotion-4"
    >
      <span
        className="emotion-3"
      >
        Error
      </span>
       
    </div>
  </div>,
  .emotion-4 {
  padding-top: 8px;
}

.emotion-0 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-2 {
  position: relative;
}

.emotion-1 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #000000;
  background-color: #ffffff;
  border: 1px solid #c92300;
  border-width: 2px;
}

.emotion-1:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-1:hover {
  border: 2px solid #ffffff;
}

.emotion-3 {
  color: #c92300;
  font-style: italic;
  white-space: pre-line;
}

<div
    className="emotion-4"
  >
    <label
      className="emotion-0"
      htmlFor="newPassword2"
    >
      Confirm Password
    </label>
    <div
      className="emotion-2"
    >
      <input
        className="emotion-1"
        disabled={false}
        id="newPassword2"
        name="newPassword2"
        onChange={[Function]}
        type="password"
        value="foo"
      />
    </div>
    <div
      className="emotion-4"
    >
      <span
        className="emotion-3"
      >
        Error
      </span>
       
    </div>
  </div>,
  .emotion-1 {
  padding-top: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0[aria-disabled=true] {
  background-color: #808080;
}

.emotion-0,
.emotion-0:hover,
.emotion-0:visited {
  background-color: #73b61c;
}

.emotion-0:hover {
  background-color: #96c955;
}

<div
    className="emotion-1"
  >
    <button
      className="emotion-0"
      onClick={[Function]}
      type="submit"
    >
      Save
    </button>
  </div>,
]
`;
